--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -76,7 +76,7 @@ a:hover {
     text-decoration: underline;
 }
 
-input[type="file"]{
+/*input[type="file"]{
     display: inline-block;
     background-color: #e7e7e7;
     color: #333;
@@ -85,7 +85,8 @@ input[type="file"]{
     cursor: pointer;
     font-size: 16px;
     margin-right: 10px;
-}   
+}   */
+   
 button {
     background-color: #636e49; 
     color: white;
@@ -101,4 +102,53 @@ button:hover {
 }
 table{
   margin-top: 30px;
+  width: 100%;
+  border-collapse: collapse;
+  margin: 20px 0;
+  font-size: 16px;
+  text-align: left;
+}
+th, td {
+  padding: 12px;
+  border: 1px solid #ddd;
+}
+
+th {
+  background-color: #f4f4f4;
+}
+
+tr:nth-child(even) {
+  background-color: #f9f9f9;
+}
+
+tr:hover {
+  background-color: #f1f1f1;
+}
+
+tr.highlight {
+  background-color: red !important;
+}
+
+tr.selected {
+  background-color: yellow !important;
+}
+
+input[type="file"] {
+  display: none; 
+}
+
+.custom-file-upload {
+  display: inline-block;
+  background-color: #e7e7e7;
+  color: #333;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  margin-right: 10px;
+  text-align: center;
+}
+
+.custom-file-upload:hover {
+  background-color: #d6d6d6;
 }
