--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -152,3 +152,60 @@ input[type="file"] {
 .custom-file-upload:hover {
   background-color: #d6d6d6;
 }
+.registration-form, .login-form, .center-form {
+  max-width: 500px;
+  margin: 0 auto;
+}
+
+.login-form {
+  background-color: #f8f9fa;
+  padding: 40px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.login-form h1 {
+  text-align: center;
+  margin-bottom: 20px;
+  font-size: 24px;
+  color: #333;
+}
+
+.form-group {
+  margin-bottom: 20px;
+}
+
+.form-control {
+  width: 100%;
+  padding: 10px;
+  margin: 5px 0 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+.form-control:focus {
+  border-color: #007bff;
+  outline: none;
+}
+
+.btn {
+  width: 100%;
+  padding: 10px;
+  background-color: #636e49;
+  border: none;
+  color: white;
+  font-size: 16px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.btn:hover {
+  background-color: #1d2016;
+}
+
+.error-item {
+  color: red;
+  font-size: 12px;
+}
+
