Trace logs page implemented

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -206,3 +206,26 @@ input[type="file"] {
   font-size: 12px;
 }
 
+select {
+  width: 200px;
+  padding: 8px;
+  margin: 10px 0;
+  font-size: 1em;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  background-color: #f9f9f9;
+}
+
+input[type="date"] {
+  width: 200px;
+  padding: 8px;
+  margin: 10px 0;
+  font-size: 1em;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  background-color: #f9f9f9;
+}
+.trace{
+  display: flex;
+  gap: 50px;
+}
