--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -109,7 +109,6 @@ table{
   text-align: left;
 }
 th, td {
-  padding: 12px;
   border: 1px solid #ddd;
 }
 
@@ -228,4 +227,15 @@ input[type="date"] {
 .trace{
   display: flex;
   gap: 50px;
+}
+input{
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  transition: background-color 0.3s
+}
+.sendLogs{
+  display: none;
 }
