--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -8,7 +8,7 @@ body {
     list-style: none;
     padding: 0;
     overflow: hidden;
-    background-color: #636e49;
+    background-color: #333652;
   }
   
   nav ul li {
@@ -18,7 +18,7 @@ body {
   }
   
   h1 {
-    color: #636e49;
+    color: #333652;
   }
   
   p {
@@ -55,7 +55,7 @@ body {
 }
 
 h1 {
-    color: #636e49;
+    color: #333652;
 }
 
 ul {
@@ -73,7 +73,7 @@ a {
 }
 
 a:hover {
-    text-decoration: underline;
+    text-decoration: none;  
 }
 
 /*input[type="file"]{
@@ -88,7 +88,7 @@ a:hover {
 }   */
    
 button {
-    background-color: #636e49; 
+    background-color: #90adc6; 
     color: white;
     border: none;
     padding: 10px 20px;
@@ -98,7 +98,7 @@ button {
     transition: background-color 0.3s;
 }
 button:hover {
-    background-color: #636e49; 
+    background-color: #e9eaec; 
 }
 table{
   margin-top: 30px;
@@ -188,7 +188,7 @@ input[type="file"] {
 .btn {
   width: 100%;
   padding: 10px;
-  background-color: #636e49;
+  background-color: #fad02C;
   border: none;
   color: white;
   font-size: 16px;
@@ -197,7 +197,7 @@ input[type="file"] {
 }
 
 .btn:hover {
-  background-color: #636e49;
+  background-color: #e9eaec;
 }
 
 .error-item {
@@ -238,4 +238,22 @@ input{
 }
 .sendLogs{
   display: none;
+}
+#trace-div{
+  display: flex;
+  justify-content: space-between;
+}
+#submit-div{
+  display: flex;
+  gap:10px
+}
+#cancel-btn{
+  background-color: #E12A2A;
+}
+#trace-btn{
+  background-color: #469A49;
+}
+#upload-div{
+  display: flex;
+  justify-content: space-between;
 }
